tests/baselines/reference/baseClassOutOfOrderInModule.errors.txt
tests/cases/compiler/baseClassOutOfOrderInModule.ts(9,18): error TS2653: Base expression references type before it is declared.


==== tests/cases/compiler/baseClassOutOfOrderInModule.ts (1 errors) ====
    module M {
        export class A {
        }
    }
    
    class C1 extends M.A { // no error
    }
    
    class C2 extends M.B { // error
                     ~~~
!!! error TS2653: Base expression references type before it is declared.
    }
    
    function foo2() {
        class C3 extends M.A { // no error
        }
    
        class C4 extends M.B { // no error
        }
    }
    
    module M {
        export class B {
        }
    }